# os3-hyperspace

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md
crates/hyperspace-ai/: Cargo.toml
crates/hyperspace-ai/src/: lib.rs  message.rs  runtime.rs  stub.rs
crates/hyperspace-core/: Cargo.toml
crates/hyperspace-core/src/: dimension.rs  error.rs  lib.rs  object.rs  viewport.rs
crates/hyperspace-fs/: Cargo.toml
crates/hyperspace-fs/src/: file.rs  lib.rs  memory.rs  path.rs  store.rs
crates/hyperspace-fs/tests/: workspace.rs
crates/hyperspace-shell/: Cargo.toml
crates/hyperspace-shell/src/: app.rs  canvas.rs  main.rs  palette.rs  theme.rs
docs/: DEVELOPMENT-LOG.md  PHASES.md  README.md  ai-runtime.md  dev-windows.md  persistence.md  redox-roadmap.md  smart-objects.md  ux-vision.md
scripts/: dev.ps1
