[workspace]
resolver = "2"
members = [
    "crates/hyperspace-core",
    "crates/hyperspace-shell",
    "crates/hyperspace-ai",
    "crates/hyperspace-fs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kraken Unbound"]
repository = "https://github.com/krakenunbound/os3-hyperspace"

[workspace.dependencies]
hyperspace-core = { path = "crates/hyperspace-core" }
hyperspace-ai = { path = "crates/hyperspace-ai" }
hyperspace-fs = { path = "crates/hyperspace-fs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
