[package]
name = "hyperspace-ai"
description = "Local-first AI runtime hooks for OS/3 Hyperspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
hyperspace-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
